// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App renders rain without crashing 1`] = `
<Memo(App)>
  <div
    className="App"
  >
    <Toggle
      isRain={true}
      lLabel="Snow"
      rLabel="Rain"
      toggle={[Function]}
    >
      <div
        className="toggleContainer"
      >
        <span
          className="label"
        >
          Snow
        </span>
        <label
          className="switch"
          htmlFor="toggle"
        >
          <input
            id="toggle"
            onClick={[Function]}
            type="checkbox"
          />
          <span
            className="slider round"
          />
        </label>
        <span
          className="label"
        >
          Rain
        </span>
      </div>
    </Toggle>
    <Memo(Rain)>
      <div
        className="rain-wrapper"
      >
        <i
          className="rain"
          key="0"
        />
        <i
          className="rain"
          key="1"
        />
        <i
          className="rain"
          key="2"
        />
        <i
          className="rain"
          key="3"
        />
        <i
          className="rain"
          key="4"
        />
        <i
          className="rain"
          key="5"
        />
        <i
          className="rain"
          key="6"
        />
        <i
          className="rain"
          key="7"
        />
        <i
          className="rain"
          key="8"
        />
        <i
          className="rain"
          key="9"
        />
        <i
          className="rain"
          key="10"
        />
        <i
          className="rain"
          key="11"
        />
        <i
          className="rain"
          key="12"
        />
        <i
          className="rain"
          key="13"
        />
        <i
          className="rain"
          key="14"
        />
        <i
          className="rain"
          key="15"
        />
        <i
          className="rain"
          key="16"
        />
        <i
          className="rain"
          key="17"
        />
        <i
          className="rain"
          key="18"
        />
        <i
          className="rain"
          key="19"
        />
        <i
          className="rain"
          key="20"
        />
        <i
          className="rain"
          key="21"
        />
        <i
          className="rain"
          key="22"
        />
        <i
          className="rain"
          key="23"
        />
        <i
          className="rain"
          key="24"
        />
        <i
          className="rain"
          key="25"
        />
        <i
          className="rain"
          key="26"
        />
        <i
          className="rain"
          key="27"
        />
        <i
          className="rain"
          key="28"
        />
        <i
          className="rain"
          key="29"
        />
        <i
          className="rain"
          key="30"
        />
        <i
          className="rain"
          key="31"
        />
        <i
          className="rain"
          key="32"
        />
        <i
          className="rain"
          key="33"
        />
        <i
          className="rain"
          key="34"
        />
        <i
          className="rain"
          key="35"
        />
        <i
          className="rain"
          key="36"
        />
        <i
          className="rain"
          key="37"
        />
        <i
          className="rain"
          key="38"
        />
        <i
          className="rain"
          key="39"
        />
        <i
          className="rain"
          key="40"
        />
        <i
          className="rain"
          key="41"
        />
        <i
          className="rain"
          key="42"
        />
        <i
          className="rain"
          key="43"
        />
        <i
          className="rain"
          key="44"
        />
        <i
          className="rain"
          key="45"
        />
        <i
          className="rain"
          key="46"
        />
        <i
          className="rain"
          key="47"
        />
        <i
          className="rain"
          key="48"
        />
        <i
          className="rain"
          key="49"
        />
        <i
          className="rain"
          key="50"
        />
        <i
          className="rain"
          key="51"
        />
        <i
          className="rain"
          key="52"
        />
        <i
          className="rain"
          key="53"
        />
        <i
          className="rain"
          key="54"
        />
        <i
          className="rain"
          key="55"
        />
        <i
          className="rain"
          key="56"
        />
        <i
          className="rain"
          key="57"
        />
        <i
          className="rain"
          key="58"
        />
        <i
          className="rain"
          key="59"
        />
        <i
          className="rain"
          key="60"
        />
        <i
          className="rain"
          key="61"
        />
        <i
          className="rain"
          key="62"
        />
        <i
          className="rain"
          key="63"
        />
        <i
          className="rain"
          key="64"
        />
        <i
          className="rain"
          key="65"
        />
        <i
          className="rain"
          key="66"
        />
        <i
          className="rain"
          key="67"
        />
        <i
          className="rain"
          key="68"
        />
        <i
          className="rain"
          key="69"
        />
        <i
          className="rain"
          key="70"
        />
        <i
          className="rain"
          key="71"
        />
        <i
          className="rain"
          key="72"
        />
        <i
          className="rain"
          key="73"
        />
        <i
          className="rain"
          key="74"
        />
        <i
          className="rain"
          key="75"
        />
        <i
          className="rain"
          key="76"
        />
        <i
          className="rain"
          key="77"
        />
        <i
          className="rain"
          key="78"
        />
        <i
          className="rain"
          key="79"
        />
        <i
          className="rain"
          key="80"
        />
        <i
          className="rain"
          key="81"
        />
        <i
          className="rain"
          key="82"
        />
        <i
          className="rain"
          key="83"
        />
        <i
          className="rain"
          key="84"
        />
        <i
          className="rain"
          key="85"
        />
        <i
          className="rain"
          key="86"
        />
        <i
          className="rain"
          key="87"
        />
        <i
          className="rain"
          key="88"
        />
        <i
          className="rain"
          key="89"
        />
        <i
          className="rain"
          key="90"
        />
        <i
          className="rain"
          key="91"
        />
        <i
          className="rain"
          key="92"
        />
        <i
          className="rain"
          key="93"
        />
        <i
          className="rain"
          key="94"
        />
        <i
          className="rain"
          key="95"
        />
        <i
          className="rain"
          key="96"
        />
        <i
          className="rain"
          key="97"
        />
        <i
          className="rain"
          key="98"
        />
        <i
          className="rain"
          key="99"
        />
        <i
          className="rain"
          key="100"
        />
        <i
          className="rain"
          key="101"
        />
        <i
          className="rain"
          key="102"
        />
        <i
          className="rain"
          key="103"
        />
        <i
          className="rain"
          key="104"
        />
        <i
          className="rain"
          key="105"
        />
        <i
          className="rain"
          key="106"
        />
        <i
          className="rain"
          key="107"
        />
        <i
          className="rain"
          key="108"
        />
        <i
          className="rain"
          key="109"
        />
        <i
          className="rain"
          key="110"
        />
        <i
          className="rain"
          key="111"
        />
        <i
          className="rain"
          key="112"
        />
        <i
          className="rain"
          key="113"
        />
        <i
          className="rain"
          key="114"
        />
        <i
          className="rain"
          key="115"
        />
        <i
          className="rain"
          key="116"
        />
        <i
          className="rain"
          key="117"
        />
        <i
          className="rain"
          key="118"
        />
        <i
          className="rain"
          key="119"
        />
        <i
          className="rain"
          key="120"
        />
        <i
          className="rain"
          key="121"
        />
        <i
          className="rain"
          key="122"
        />
        <i
          className="rain"
          key="123"
        />
        <i
          className="rain"
          key="124"
        />
        <i
          className="rain"
          key="125"
        />
        <i
          className="rain"
          key="126"
        />
        <i
          className="rain"
          key="127"
        />
        <i
          className="rain"
          key="128"
        />
        <i
          className="rain"
          key="129"
        />
        <i
          className="rain"
          key="130"
        />
        <i
          className="rain"
          key="131"
        />
        <i
          className="rain"
          key="132"
        />
        <i
          className="rain"
          key="133"
        />
        <i
          className="rain"
          key="134"
        />
        <i
          className="rain"
          key="135"
        />
        <i
          className="rain"
          key="136"
        />
        <i
          className="rain"
          key="137"
        />
        <i
          className="rain"
          key="138"
        />
        <i
          className="rain"
          key="139"
        />
        <i
          className="rain"
          key="140"
        />
        <i
          className="rain"
          key="141"
        />
        <i
          className="rain"
          key="142"
        />
        <i
          className="rain"
          key="143"
        />
        <i
          className="rain"
          key="144"
        />
        <i
          className="rain"
          key="145"
        />
        <i
          className="rain"
          key="146"
        />
        <i
          className="rain"
          key="147"
        />
        <i
          className="rain"
          key="148"
        />
        <i
          className="rain"
          key="149"
        />
      </div>
    </Memo(Rain)>
    <header />
    <TweetBox
      handleAlert={[Function]}
      placeholder="What's happening?"
      setAlert={[Function]}
    >
      <section
        className="tweetbox border-bottom"
      >
        <Container
          fluid={false}
        >
          <div
            className="container"
          >
            <ForwardRef
              noGutters={false}
            >
              <div
                className="row"
              >
                <Col
                  className="d-none d-md-block"
                  md={3}
                >
                  <div
                    className="d-none d-md-block col-md-3"
                  >
                    <Bootstrap(Image)
                      className="avatar"
                      roundedCircle={true}
                      src="https://pbs.twimg.com/profile_images/553467511211970560/nBE77dF0_400x400.jpeg"
                    >
                      <Image
                        bsPrefix="img"
                        className="avatar"
                        fluid={false}
                        rounded={false}
                        roundedCircle={true}
                        src="https://pbs.twimg.com/profile_images/553467511211970560/nBE77dF0_400x400.jpeg"
                        thumbnail={false}
                      >
                        <img
                          className="avatar rounded-circle"
                          src="https://pbs.twimg.com/profile_images/553467511211970560/nBE77dF0_400x400.jpeg"
                        />
                      </Image>
                    </Bootstrap(Image)>
                  </div>
                </Col>
                <Col
                  md={9}
                  sm={12}
                >
                  <div
                    className="col-md-9 col-sm-12"
                  >
                    <InputGroup
                      className="px-4"
                    >
                      <div
                        className="px-4 input-group"
                      >
                        <FormControl
                          onChange={[Function]}
                          placeholder="What's happening?"
                          value=""
                        >
                          <input
                            className="form-control"
                            onChange={[Function]}
                            placeholder="What's happening?"
                            value=""
                          />
                        </FormControl>
                        <InputGroupAppend>
                          <div
                            className="input-group-append"
                          >
                            <Button
                              active={false}
                              disabled={false}
                              onClick={[Function]}
                              type="submit"
                              value="submit"
                              variant="primary"
                            >
                              <button
                                className="btn btn-primary"
                                disabled={false}
                                onClick={[Function]}
                                type="submit"
                                value="submit"
                              >
                                <span
                                  className="mobile-hidden"
                                >
                                  Tweet 
                                </span>
                                <FontAwesomeIcon
                                  border={false}
                                  className=""
                                  fixedWidth={false}
                                  flip={null}
                                  icon={
                                    Object {
                                      "icon": Array [
                                        512,
                                        512,
                                        Array [],
                                        "f099",
                                        "M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z",
                                      ],
                                      "iconName": "twitter",
                                      "prefix": "fab",
                                    }
                                  }
                                  inverse={false}
                                  listItem={false}
                                  mask={null}
                                  pull={null}
                                  pulse={false}
                                  rotation={null}
                                  size={null}
                                  spin={false}
                                  swapOpacity={false}
                                  symbol={false}
                                  title=""
                                  transform={null}
                                >
                                  <svg
                                    aria-hidden="true"
                                    className="svg-inline--fa fa-twitter fa-w-16 fa-null fa-rotate-null fa-pull-null "
                                    data-icon="twitter"
                                    data-prefix="fab"
                                    focusable="false"
                                    role="img"
                                    style={Object {}}
                                    viewBox="0 0 512 512"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"
                                      fill="currentColor"
                                      style={Object {}}
                                    />
                                  </svg>
                                </FontAwesomeIcon>
                              </button>
                            </Button>
                            <p
                              className="chars my-auto mobile-hidden"
                            >
                              140 chars left
                            </p>
                          </div>
                        </InputGroupAppend>
                      </div>
                    </InputGroup>
                    <Container
                      className="tweets mt-4"
                      fluid={false}
                    >
                      <div
                        className="tweets mt-4 container"
                      />
                    </Container>
                  </div>
                </Col>
              </div>
            </ForwardRef>
          </div>
        </Container>
      </section>
    </TweetBox>
    <CustomAlert
      isShown=""
      message=""
      variant=""
    >
      <Alert
        className="custom-alert hidden"
        closeLabel="Close alert"
        show={true}
        transition={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "defaultProps": Object {
              "appear": false,
              "in": false,
              "mountOnEnter": false,
              "timeout": 300,
              "unmountOnExit": false,
            },
            "displayName": "Fade",
            "render": [Function],
          }
        }
        variant=""
      >
        <Fade
          appear={false}
          in={true}
          mountOnEnter={false}
          timeout={300}
          unmountOnExit={true}
        >
          <Transition
            addEndListener={[Function]}
            appear={false}
            enter={true}
            exit={true}
            in={true}
            mountOnEnter={false}
            onEnter={[Function]}
            onEntered={[Function]}
            onEntering={[Function]}
            onExit={[Function]}
            onExited={[Function]}
            onExiting={[Function]}
            timeout={300}
            unmountOnExit={true}
          >
            <div
              className="fade custom-alert hidden alert show"
              role="alert"
            />
          </Transition>
        </Fade>
      </Alert>
    </CustomAlert>
  </div>
</Memo(App)>
`;

exports[`App renders snow without crashing 1`] = `
<Memo(App)>
  <div
    className="App"
  >
    <Toggle
      isRain={false}
      lLabel="Snow"
      rLabel="Rain"
      toggle={[Function]}
    >
      <div
        className="toggleContainer"
      >
        <span
          className="label"
        >
          Snow
        </span>
        <label
          className="switch"
          htmlFor="toggle"
        >
          <input
            id="toggle"
            onClick={[Function]}
            type="checkbox"
          />
          <span
            className="slider round"
          />
        </label>
        <span
          className="label"
        >
          Rain
        </span>
      </div>
    </Toggle>
    <Memo(Snow)>
      <div
        className="snow"
      >
        <svg
          preserveAspectRatio="xMidYMax slice"
          viewBox="0 0 1024 1536"
        >
          <g
            fill="#FFF"
            fillOpacity=".15"
            transform="translate(55 42)"
          >
            <g
              id="snow-bottom-layer"
            >
              <ellipse
                cx="6"
                cy="1009.5"
                rx="6"
                ry="5.5"
              />
              <ellipse
                cx="138"
                cy="1110.5"
                rx="6"
                ry="5.5"
              />
              <ellipse
                cx="398"
                cy="1055.5"
                rx="6"
                ry="5.5"
              />
              <ellipse
                cx="719"
                cy="1284.5"
                rx="6"
                ry="5.5"
              />
              <ellipse
                cx="760"
                cy="1155.5"
                rx="6"
                ry="5.5"
              />
              <ellipse
                cx="635"
                cy="1459.5"
                rx="6"
                ry="5.5"
              />
              <ellipse
                cx="478"
                cy="1335.5"
                rx="6"
                ry="5.5"
              />
              <ellipse
                cx="322"
                cy="1414.5"
                rx="6"
                ry="5.5"
              />
              <ellipse
                cx="247"
                cy="1234.5"
                rx="6"
                ry="5.5"
              />
              <ellipse
                cx="154"
                cy="1425.5"
                rx="6"
                ry="5.5"
              />
              <ellipse
                cx="731"
                cy="773.5"
                rx="6"
                ry="5.5"
              />
              <ellipse
                cx="599"
                cy="874.5"
                rx="6"
                ry="5.5"
              />
              <ellipse
                cx="339"
                cy="819.5"
                rx="6"
                ry="5.5"
              />
              <ellipse
                cx="239"
                cy="1004.5"
                rx="6"
                ry="5.5"
              />
              <ellipse
                cx="113"
                cy="863.5"
                rx="6"
                ry="5.5"
              />
              <ellipse
                cx="102"
                cy="1223.5"
                rx="6"
                ry="5.5"
              />
              <ellipse
                cx="395"
                cy="1155.5"
                rx="6"
                ry="5.5"
              />
              <ellipse
                cx="826"
                cy="943.5"
                rx="6"
                ry="5.5"
              />
              <ellipse
                cx="626"
                cy="1054.5"
                rx="6"
                ry="5.5"
              />
              <ellipse
                cx="887"
                cy="1366.5"
                rx="6"
                ry="5.5"
              />
              <ellipse
                cx="6"
                cy="241.5"
                rx="6"
                ry="5.5"
              />
              <ellipse
                cx="138"
                cy="342.5"
                rx="6"
                ry="5.5"
              />
              <ellipse
                cx="398"
                cy="287.5"
                rx="6"
                ry="5.5"
              />
              <ellipse
                cx="719"
                cy="516.5"
                rx="6"
                ry="5.5"
              />
              <ellipse
                cx="760"
                cy="387.5"
                rx="6"
                ry="5.5"
              />
              <ellipse
                cx="635"
                cy="691.5"
                rx="6"
                ry="5.5"
              />
              <ellipse
                cx="478"
                cy="567.5"
                rx="6"
                ry="5.5"
              />
              <ellipse
                cx="322"
                cy="646.5"
                rx="6"
                ry="5.5"
              />
              <ellipse
                cx="247"
                cy="466.5"
                rx="6"
                ry="5.5"
              />
              <ellipse
                cx="154"
                cy="657.5"
                rx="6"
                ry="5.5"
              />
              <ellipse
                cx="731"
                cy="5.5"
                rx="6"
                ry="5.5"
              />
              <ellipse
                cx="599"
                cy="106.5"
                rx="6"
                ry="5.5"
              />
              <ellipse
                cx="339"
                cy="51.5"
                rx="6"
                ry="5.5"
              />
              <ellipse
                cx="239"
                cy="236.5"
                rx="6"
                ry="5.5"
              />
              <ellipse
                cx="113"
                cy="95.5"
                rx="6"
                ry="5.5"
              />
              <ellipse
                cx="102"
                cy="455.5"
                rx="6"
                ry="5.5"
              />
              <ellipse
                cx="395"
                cy="387.5"
                rx="6"
                ry="5.5"
              />
              <ellipse
                cx="826"
                cy="175.5"
                rx="6"
                ry="5.5"
              />
              <ellipse
                cx="626"
                cy="286.5"
                rx="6"
                ry="5.5"
              />
              <ellipse
                cx="887"
                cy="598.5"
                rx="6"
                ry="5.5"
              />
            </g>
          </g>
          <g
            fill="#FFF"
            fillOpacity=".3"
            transform="translate(65 63)"
          >
            <g
              id="snow-top-layer"
            >
              <circle
                cx="8"
                cy="776"
                r="8"
              />
              <circle
                cx="189"
                cy="925"
                r="8"
              />
              <circle
                cx="548"
                cy="844"
                r="8"
              />
              <circle
                cx="685"
                cy="1115"
                r="8"
              />
              <circle
                cx="858"
                cy="909"
                r="8"
              />
              <circle
                cx="874"
                cy="1438"
                r="8"
                transform="rotate(180 874 1438)"
              />
              <circle
                cx="657"
                cy="1256"
                r="8"
                transform="rotate(180 657 1256)"
              />
              <circle
                cx="443"
                cy="1372"
                r="8"
                transform="rotate(180 443 1372)"
              />
              <circle
                cx="339"
                cy="1107"
                r="8"
                transform="rotate(180 339 1107)"
              />
              <circle
                cx="24"
                cy="1305"
                r="8"
                transform="rotate(180 24 1305)"
              />
              <circle
                cx="8"
                cy="8"
                r="8"
              />
              <circle
                cx="189"
                cy="157"
                r="8"
              />
              <circle
                cx="548"
                cy="76"
                r="8"
              />
              <circle
                cx="685"
                cy="347"
                r="8"
              />
              <circle
                cx="858"
                cy="141"
                r="8"
              />
              <circle
                cx="874"
                cy="670"
                r="8"
                transform="rotate(180 874 670)"
              />
              <circle
                cx="657"
                cy="488"
                r="8"
                transform="rotate(180 657 488)"
              />
              <circle
                cx="443"
                cy="604"
                r="8"
                transform="rotate(180 443 604)"
              />
              <circle
                cx="339"
                cy="339"
                r="8"
                transform="rotate(180 339 339)"
              />
              <circle
                cx="24"
                cy="537"
                r="8"
                transform="rotate(180 24 537)"
              />
            </g>
          </g>
        </svg>
      </div>
    </Memo(Snow)>
    <header />
    <TweetBox
      handleAlert={[Function]}
      placeholder="What's happening?"
      setAlert={[Function]}
    >
      <section
        className="tweetbox border-bottom"
      >
        <Container
          fluid={false}
        >
          <div
            className="container"
          >
            <ForwardRef
              noGutters={false}
            >
              <div
                className="row"
              >
                <Col
                  className="d-none d-md-block"
                  md={3}
                >
                  <div
                    className="d-none d-md-block col-md-3"
                  >
                    <Bootstrap(Image)
                      className="avatar"
                      roundedCircle={true}
                      src="https://pbs.twimg.com/profile_images/553467511211970560/nBE77dF0_400x400.jpeg"
                    >
                      <Image
                        bsPrefix="img"
                        className="avatar"
                        fluid={false}
                        rounded={false}
                        roundedCircle={true}
                        src="https://pbs.twimg.com/profile_images/553467511211970560/nBE77dF0_400x400.jpeg"
                        thumbnail={false}
                      >
                        <img
                          className="avatar rounded-circle"
                          src="https://pbs.twimg.com/profile_images/553467511211970560/nBE77dF0_400x400.jpeg"
                        />
                      </Image>
                    </Bootstrap(Image)>
                  </div>
                </Col>
                <Col
                  md={9}
                  sm={12}
                >
                  <div
                    className="col-md-9 col-sm-12"
                  >
                    <InputGroup
                      className="px-4"
                    >
                      <div
                        className="px-4 input-group"
                      >
                        <FormControl
                          onChange={[Function]}
                          placeholder="What's happening?"
                          value=""
                        >
                          <input
                            className="form-control"
                            onChange={[Function]}
                            placeholder="What's happening?"
                            value=""
                          />
                        </FormControl>
                        <InputGroupAppend>
                          <div
                            className="input-group-append"
                          >
                            <Button
                              active={false}
                              disabled={false}
                              onClick={[Function]}
                              type="submit"
                              value="submit"
                              variant="primary"
                            >
                              <button
                                className="btn btn-primary"
                                disabled={false}
                                onClick={[Function]}
                                type="submit"
                                value="submit"
                              >
                                <span
                                  className="mobile-hidden"
                                >
                                  Tweet 
                                </span>
                                <FontAwesomeIcon
                                  border={false}
                                  className=""
                                  fixedWidth={false}
                                  flip={null}
                                  icon={
                                    Object {
                                      "icon": Array [
                                        512,
                                        512,
                                        Array [],
                                        "f099",
                                        "M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z",
                                      ],
                                      "iconName": "twitter",
                                      "prefix": "fab",
                                    }
                                  }
                                  inverse={false}
                                  listItem={false}
                                  mask={null}
                                  pull={null}
                                  pulse={false}
                                  rotation={null}
                                  size={null}
                                  spin={false}
                                  swapOpacity={false}
                                  symbol={false}
                                  title=""
                                  transform={null}
                                >
                                  <svg
                                    aria-hidden="true"
                                    className="svg-inline--fa fa-twitter fa-w-16 fa-null fa-rotate-null fa-pull-null "
                                    data-icon="twitter"
                                    data-prefix="fab"
                                    focusable="false"
                                    role="img"
                                    style={Object {}}
                                    viewBox="0 0 512 512"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"
                                      fill="currentColor"
                                      style={Object {}}
                                    />
                                  </svg>
                                </FontAwesomeIcon>
                              </button>
                            </Button>
                            <p
                              className="chars my-auto mobile-hidden"
                            >
                              140 chars left
                            </p>
                          </div>
                        </InputGroupAppend>
                      </div>
                    </InputGroup>
                    <Container
                      className="tweets mt-4"
                      fluid={false}
                    >
                      <div
                        className="tweets mt-4 container"
                      />
                    </Container>
                  </div>
                </Col>
              </div>
            </ForwardRef>
          </div>
        </Container>
      </section>
    </TweetBox>
    <CustomAlert
      isShown=""
      message=""
      variant=""
    >
      <Alert
        className="custom-alert hidden"
        closeLabel="Close alert"
        show={true}
        transition={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "defaultProps": Object {
              "appear": false,
              "in": false,
              "mountOnEnter": false,
              "timeout": 300,
              "unmountOnExit": false,
            },
            "displayName": "Fade",
            "render": [Function],
          }
        }
        variant=""
      >
        <Fade
          appear={false}
          in={true}
          mountOnEnter={false}
          timeout={300}
          unmountOnExit={true}
        >
          <Transition
            addEndListener={[Function]}
            appear={false}
            enter={true}
            exit={true}
            in={true}
            mountOnEnter={false}
            onEnter={[Function]}
            onEntered={[Function]}
            onEntering={[Function]}
            onExit={[Function]}
            onExited={[Function]}
            onExiting={[Function]}
            timeout={300}
            unmountOnExit={true}
          >
            <div
              className="fade custom-alert hidden alert show"
              role="alert"
            />
          </Transition>
        </Fade>
      </Alert>
    </CustomAlert>
  </div>
</Memo(App)>
`;
